--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,5 +19,21 @@
                "clean"
             ],
         },
+        {
+            "label": "flash",
+            "type": "shell",
+            "command": "make",
+            "args": [
+               "flash"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            }
+        },
     ]
 }
