--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "configFiles": [
                 "interface/stlink.cfg",
                 "target/stm32f1x.cfg"
-            ]
+            ],
+            "preLaunchTask": "flash"
         }
     ]
 }
