--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "*.make": "makefile",
         "sstream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "support.h": "c",
+        "stm32f1xx_hal.h": "c",
+        "rts_support.h": "c"
     }
 }
